fix: guides overlapping footer on narrow screens (#1007)
Fixes that the guide tiles can overlap the footer on smaller screens.

Fixes https://github.com/angular/components/issues/22860.

--- a/material.angular.io/src/app/pages/guide-list/guide-list.scss
+++ b/material.angular.io/src/app/pages/guide-list/guide-list.scss
@@ -1,6 +1,9 @@
 :host,
 .docs-guide {
-  height: 100%;
+  // Ensures that the footer is pushed to the bottom if the page is too short.
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .docs-guide-list {
